fixes enlarged text on mobile Chrome

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,8 @@
 /*————————————————————————————————————————————————————————————————*/
 /* general */
 
+html * {max-height:1000000px;}
+
 :root {
   --bg-color: rgb(255, 246, 234);
 }
